force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Is_Template__c.field-meta.xml
<CustomField>
    <fullName>agf__Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>