force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Known_Issue_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__Known_Issue_ID__c</fullName>
    <label>Known Issue ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>