force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>agf__Last_Updated_By__c</fullName>
    <formula>$User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Updated By</label>
    <type>Text</type>
</CustomField>