force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Major_Func_Area__c.field-meta.xml
<CustomField>
    <fullName>agf__Major_Func_Area__c</fullName>
    <label>Major Func Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>agf__Product_Area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>.NET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>