force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Major_Release__c.field-meta.xml
<CustomField>
    <fullName>agf__Major_Release__c</fullName>
    <formula>IF(CONTAINS(agf__Scheduled_Build_Name__c, &quot;.&quot;),LEFT(agf__Scheduled_Build_Name__c, FIND(&quot;.&quot;, agf__Scheduled_Build_Name__c)-1),agf__Scheduled_Build_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Major Release</label>
    <type>Text</type>
</CustomField>