force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Minor_Func_Area__c.field-meta.xml
<CustomField>
    <fullName>agf__Minor_Func_Area__c</fullName>
    <label>Minor Func Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>