force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Mobile_Device_OS__c.field-meta.xml
<CustomField>
    <fullName>agf__Mobile_Device_OS__c</fullName>
    <label>Mobile Device OS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Android 4.2.x</fullName>
            </value>
            <value>
                <fullName>Android 4.3</fullName>
            </value>
            <value>
                <fullName>Android 4.4.x</fullName>
            </value>
            <value>
                <fullName>Android 5.x</fullName>
            </value>
            <value>
                <fullName>iOS 8</fullName>
            </value>
            <value>
                <fullName>iOS 9.0</fullName>
            </value>
            <value>
                <fullName>iOS 9.0.1</fullName>
            </value>
            <value>
                <fullName>iOS 9.0.2</fullName>
            </value>
            <value>
                <fullName>iOS 9.1</fullName>
            </value>
            <value>
                <fullName>iOS 9.2</fullName>
            </value>
            <value>
                <fullName>Windows 10.0</fullName>
            </value>
            <value>
                <fullName>Windows 10 Pro</fullName>
            </value>
            <value>
                <fullName>Windows 8.0</fullName>
            </value>
            <value>
                <fullName>Windows 8.0 Pro</fullName>
            </value>
            <value>
                <fullName>Windows 8.1</fullName>
            </value>
            <value>
                <fullName>Windows 8.1 Pro</fullName>
            </value>
            <value>
                <fullName>Windows Phone 10.0</fullName>
            </value>
            <value>
                <fullName>Windows Phone 8.0</fullName>
            </value>
            <value>
                <fullName>Windows Phone 8.1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>