force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Num_Of_Prod_Occ__c.field-meta.xml
<CustomField>
    <fullName>agf__Num_Of_Prod_Occ__c</fullName>
    <inlineHelpText>The number of production incidents associated with this Work record. May include out-of-memory errors or gacks.</inlineHelpText>
    <label>Production Incidents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>