force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Number_of_Change_Lists__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_Change_Lists__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Change Lists</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>