force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Number_of_SLA_Violations__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_SLA_Violations__c</fullName>
    <label>Number of T&amp;P SLA Violations</label>
    <summaryFilterItems>
        <field>agf__SLA_Violation__c.agf__Type__c</field>
        <operation>notEqual</operation>
        <value>Support</value>
    </summaryFilterItems>
    <summaryForeignKey>agf__SLA_Violation__c.agf__Work__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>