force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Number_of_Tests_Classes_affected__c.field-meta.xml
<CustomField>
    <fullName>agf__Number_of_Tests_Classes_affected__c</fullName>
    <label>Number of Tests/Classes affected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>