force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__of_Test_Failures__c.field-meta.xml
<CustomField>
    <fullName>agf__of_Test_Failures__c</fullName>
    <label>Test Failures Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>