force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Origin__c.field-meta.xml
<CustomField>
    <fullName>agf__Origin__c</fullName>
    <defaultValue>&apos;Outside&apos;</defaultValue>
    <label>Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>