force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Other_Recipients__c.field-meta.xml
<CustomField>
    <fullName>agf__Other_Recipients__c</fullName>
    <description>This field is used as a transport object. Do not use this field on list view criteria or reports!</description>
    <inlineHelpText>The name of a GUS user or any salesforce.com email address</inlineHelpText>
    <label>transfer Other Recipients</label>
    <length>80</length>
    <type>Text</type>
</CustomField>