force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Out_of_SLA__c.field-meta.xml
<CustomField>
    <fullName>agf__Out_of_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of SLA</label>
    <type>Checkbox</type>
</CustomField>