force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__Parent_ID__c</fullName>
    <inlineHelpText>Add the GUS Work ID of any parent work item.  Separate multiple work IDs with commas.  View and edit the relationship via the related list.</inlineHelpText>
    <label>Add Parent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>