force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Preserve_Formatting_Copy__c.field-meta.xml
<CustomField>
    <fullName>agf__Preserve_Formatting_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preserve Formatting Copy</label>
    <type>Checkbox</type>
</CustomField>