force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Previous_Comments__c.field-meta.xml
<CustomField>
    <fullName>agf__Previous_Comments__c</fullName>
    <label>transfer Previous Comments</label>
    <length>80</length>
    <type>Text</type>
</CustomField>