force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Priority_Mapping__c.field-meta.xml
<CustomField>
    <fullName>agf__Priority_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Priority Mapping</label>
    <referenceTo>agf__ADM_Priority_Mapping__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>