force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Priority_Mapping_Copy__c.field-meta.xml
<CustomField>
    <fullName>agf__Priority_Mapping_Copy__c</fullName>
    <label>Priority Mapping Copy</label>
    <length>32</length>
    <type>Text</type>
</CustomField>