force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Priority_Override_Explanation_Copy__c.field-meta.xml
<CustomField>
    <fullName>agf__Priority_Override_Explanation_Copy__c</fullName>
    <description>used to temporarily store the contents of the priority override explanation to create a new record</description>
    <label>Priority Override Explanation Copy</label>
    <type>TextArea</type>
</CustomField>