force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>agf__Product_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>