force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Product_Tag__c.field-meta.xml
<CustomField>
    <fullName>agf__Product_Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Tag</label>
    <referenceTo>agf__ADM_Product_Tag__c</referenceTo>
    <relationshipName>Product_Tag</relationshipName>
    <type>Lookup</type>
</CustomField>