force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Product_Tag_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Product_Tag_Name__c</fullName>
    <description>Returns the name of the product tag</description>
    <formula>agf__Product_Tag__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Tag Name</label>
    <type>Text</type>
</CustomField>