force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__QA_Engineer__c.field-meta.xml
<CustomField>
    <fullName>agf__QA_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QA_Engineer</relationshipName>
    <type>Lookup</type>
</CustomField>