force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Readme_Notes__c.field-meta.xml
<CustomField>
    <fullName>agf__Readme_Notes__c</fullName>
    <inlineHelpText>How would you explain the change to customers? Try not to give away internal details. Be as general as possible.</inlineHelpText>
    <label>Readme Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>