force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Record_Type__c</fullName>
    <formula>$RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Record(Deprecated)</label>
    <type>Text</type>
</CustomField>