force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Red_Account__c.field-meta.xml
<CustomField>
    <fullName>agf__Red_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Red Account</label>
    <type>Checkbox</type>
</CustomField>