force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Regressed__c.field-meta.xml
<CustomField>
    <fullName>agf__Regressed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regressed</label>
    <type>Checkbox</type>
</CustomField>