force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Related_URL__c.field-meta.xml
<CustomField>
    <fullName>agf__Related_URL__c</fullName>
    <label>Related URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>