force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Related_URL_Link__c.field-meta.xml
<CustomField>
    <fullName>agf__Related_URL_Link__c</fullName>
    <formula>HYPERLINK(agf__Related_URL__c, agf__Related_URL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related URL Link</label>
    <type>Text</type>
</CustomField>