force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Related_Work__c.field-meta.xml
<CustomField>
    <fullName>agf__Related_Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to look up work items to create new ADM_Parent_Work__c relationships</description>
    <inlineHelpText>Used to look up work items to create new ADM_Parent_Work__c Parent/Child relationships only. This field is not meant to store any ids or values</inlineHelpText>
    <label>New Related Work</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Related_Work</relationshipName>
    <type>Lookup</type>
</CustomField>