force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Release__c.field-meta.xml
<CustomField>
    <fullName>agf__Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>agf__ADM_Release__c</referenceTo>
    <relationshipLabel>Work</relationshipLabel>
    <relationshipName>Work</relationshipName>
    <type>Lookup</type>
</CustomField>