force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Request_RD_Mgr_Review__c.field-meta.xml
<CustomField>
    <fullName>agf__Request_RD_Mgr_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Senior Mgr Review</label>
    <type>Checkbox</type>
</CustomField>