force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>agf__Resolved_By__c</fullName>
    <label>Resolved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>