force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Resolved_On__c.field-meta.xml
<CustomField>
    <fullName>agf__Resolved_On__c</fullName>
    <label>Resolved On</label>
    <type>DateTime</type>
</CustomField>