force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Root_Cause_Analysis_2__c.field-meta.xml
<CustomField>
    <fullName>agf__Root_Cause_Analysis_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Points to a related Root Cause Analysis record.</description>
    <label>Root Cause Analysis</label>
    <referenceTo>agf__RCA__c</referenceTo>
    <relationshipLabel>Work &amp; Action Plan</relationshipLabel>
    <relationshipName>Work1</relationshipName>
    <type>Lookup</type>
</CustomField>