force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Scheduled_Build_Copy__c.field-meta.xml
<CustomField>
    <fullName>agf__Scheduled_Build_Copy__c</fullName>
    <label>Scheduled Build Copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>