force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Scheduled_Build_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Scheduled_Build_Name__c</fullName>
    <formula>agf__Scheduled_Build__r.Name</formula>
    <label>Scheduled Build Name</label>
    <type>Text</type>
</CustomField>