force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Scheduled_On__c.field-meta.xml
<CustomField>
    <fullName>agf__Scheduled_On__c</fullName>
    <description>Deprecated field from BF 1.0</description>
    <label>Scheduled On</label>
    <type>Date</type>
</CustomField>