force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work__c/fields/agf__Schema__c.field-meta.xml
<CustomField>
    <fullName>agf__Schema__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Schema Change</label>
    <type>Checkbox</type>
</CustomField>